--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-router-dom": "^5.2.0",
     "react-test-render": "^1.1.2",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
@@ -66,7 +67,7 @@
     "terser-webpack-plugin": "^4.1.0",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
-    "webpack": "4.42.0",
+    "webpack": "^4.44.1",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
